5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3990/executions/1573_1559.log
== TEST (2019-03-12 22:15:57) 
-- CODE:

print(frase."Ada Lovelace foi a primeira programadora da historia."()
-- ERROR:
File "XXXX", line 2
    print(frase."Ada Lovelace foi a primeira programadora da historia."()
                                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:16:18) 
-- CODE:

print(frase."Ada Lovelace foi a primeira programadora da historia."())
-- ERROR:
File "XXXX", line 2
    print(frase."Ada Lovelace foi a primeira programadora da historia."())
                                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:17:21) 
-- CODE:

print("Ada Lovelace foi a primeira programadora da historia.".upper()
-- ERROR:
File "XXXX", line 3
    
                                                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:17:37) 
-- CODE:

print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:17:44) 
-- CODE:

print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.146927
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
